<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/black">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:src="@drawable/dua"
        android:scaleType="fitXY"
        android:contentDescription="@string/q" />
    <TextView
        android:paddingTop="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tigas"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tigad"
        android:textColor="@color/white"
        android:paddingTop="2dp"
        android:paddingBottom="5dp"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/btnmoveb"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/btntext"
        android:textStyle="bold"/>

</LinearLayout>